fix: missing menu icon on mobile

--- a/ietf/templates/includes/styles/header.scss
+++ b/ietf/templates/includes/styles/header.scss
@@ -11,6 +11,13 @@
             color: $dark;
         }
     }
+
+    .navbar-toggler-light {
+        border-color: rgba(0,0,0,.1);
+    }
+    .navbar-toggler-icon.text-dark {
+        background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba(0, 0, 0, 0.55)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E")
+    }
 }
 
 .header__logo-container {
@@ -36,7 +43,6 @@
             + ($nav-link-padding-y * 4) // vertical link padding
             + ($navbar-padding-y * 2) // navbar padding
             - ($navbar-brand-padding-y * 2); //
-        border: 2 * $btn-border-width solid $white; // button borders height
     }
 
     @include media-breakpoint-up(xl) {
